[b]Version 0.6.3[/b]:

(2008-09-23)
 * Added two icons for the mirror and flip actions (mirror.png and flip.png)
   taken from the Gimp.

(2008-09-22)
 * Now the subtitles can be mirrored, flipped or rotated along with the image.
   The way to enable it is not obvious though. You need to enable the option 
   "Include subtitles on screenshots" (Preferences->Subtitles).
 * (Linux) Tries to set "/dev/dvd" and "/dev/cdrom" (if they exist) as default 
   values for the dvd and cdrom devices.

(2008-09-21)
 * Added the new option Video->Mirror image. This option mirrors the image 
   on the Y axis.

(2008-09-20)
 * The comboboxes to select the video and audio driver in Preferences->
   General have changed. Now they are not editable, and only show some
   of the available drivers (png, jpeg... and so on are not shown). There's
   also an "User defined" option. If selected, a line edit will appear where
   the user can type the driver to use (possibly with additional options).
 * The code in preferences.h/preferences.cpp has been reorganized, and 
   now the preferences are saved in several sections in smplayer.ini.
   That means most of your settings will be lost and you'll have to reconfigure
   smplayer again (I even recommend to delete smplayer.ini, otherwise there'll 
   be a mix of the old settings with the new ones).

(2008-09-19)
 * It seems crashes still happen in the code to select subtitle tracks.
   The bug hasn't been located yet (the crash is difficult to reproduce)
   but I have added a new check in a lower level, in the function 
   SubTracks::itemAt(). Now it checks if the requested item is in range. If
   it's not valid it will print a warning and return an empty subtitle.

(2008-09-17)
 * Added an icon for the Play/Pause action. (This breaks all icon themes...)
 * Added a new option for smplayer.ini: gui_minimum_width. The width of the
   main window won't be smaller than the value of that option.